inicio da pag de listagem

--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -59,22 +59,10 @@
                 <textarea name="" id="desc"></textarea>
             </div>
     </section>
-    <input type="button" value="Save">
 
-    <!-- <search class="container_lista">
-            <h2>lista</h2>
-            <hr>
-
-            </div>
-            <input type="button" value="Cadastrar"> -->
+    <section>
+        
     </section>
-
-
-
-
-
-
-
 
 
 
