Criação da pagina produtos

--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos De Outono</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section class="rodape">
-        <h2 class="logo_prototip">Minha tentativa falhada</h2>
+    <img src="./img/folha-outono.jpg" alt="">
+    <section class="cardis">
+        <div class="card">
+            <h2 class="nome">Vela Perfumada Maçã</h2>
+            <img src="./img/Captura de tela 2025-09-24 164054.png" alt="">
+            <span>R$ 89,00/kg.</span>
+        </div>
+        <div class="card">
+            <h2 class="nome">Vela Perfumada Abóbora</h2>
+            <img src="./img/Captura de tela 2025-09-24 164111.png" alt="">
+            <span>R$ 89,00/kg.</span>
+        </div>
+        <div class="card">
+            <h2 class="nome">Vela Perfumada Canela</h2>
+            <img src="./img/Captura de tela 2025-09-24 164128.png" alt="">
+            <span>R$ 89,00/kg.</span>
+        </div>
+        <div class="card">
+            <h2 class="nome">Vela Perfumada Marshmallow</h2>
+            <img src="./img/Captura de tela 2025-09-24 164141.png" alt="">
+            <span>R$ 89,00/kg.</span>
+        </div>
     </section>
-    
+
+    <main>
+        <h1 class="acessivel">Pagina de Produtos de Outono</h1>
+
+    </main>
+
 </body>
+
 </html>
