--- a/Home/index.html
+++ b/Home/index.html
@@ -11,24 +11,33 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Italiana&family=Julius+Sans+One&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
-      <header>
-    <div class="container_cabecalho">
+    <header>
+        <div class="container_cabecalho">
 
-    <main class="pagina_inicial">
-        <h1>Veluna</h1>
-    </main>
+            <div class="pagina_inicial">
+                <h1>Veluna</h1>
+            </div>
 
-    <main class="colecao">
-        <h2>Coleção</h2>
-    </main>
+            <div class="colecao">
+                <a>Coleção</a>
+                <a>Cadastro</a>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--! Font Awesome Pro 7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc. --><path fill="currentColor" d="M448 272C448 174.8 369.2 96 272 96C174.8 96 96 174.8 96 272C96 369.2 174.8 448 272 448C369.2 448 448 369.2 448 272zM407.3 430C371 461.2 323.7 480 272 480C157.1 480 64 386.9 64 272C64 157.1 157.1 64 272 64C386.9 64 480 157.1 480 272C480 323.7 461.2 371 430 407.3L571.3 548.7C577.5 554.9 577.5 565.1 571.3 571.3C565.1 577.5 554.9 577.5 548.7 571.3L407.3 430z"/></svg>
+            </div>
+            
+            <div class="cabecalho_vela">
+                <img src="../assets/foto poster.png" alt="foto"> 
+                <h2>VELUNA</h2>
+                <H3> "Aroma que acolhe"</H3>
+            </div>
+            
+        </div>
 
-    <main class="cadastro"></main>
-    <h3>Cadastro</h3>
+        </div>
 </body>
 
 </html>
