--- a/Cadastro/index.html
+++ b/Cadastro/index.html
@@ -25,14 +25,14 @@
         <div class="box_cadastro">
             <div class="cadastro_coluna1">
                 <div class="vela">
-                    <label for="vela">vela</label>
+                    <label for="vela">Vela</label>
                     <input type="text" name="" id="vela">
                 </div>
 
                 <div class="categoria_img">
 
                     <div class="categoria">
-                        <label for="cat">categoria</label>
+                        <label for="cat">Categoria</label>
                         <input type="text" name="" id="cat">
 
                     </div>
@@ -55,7 +55,7 @@
 
             </div>
             <div class="cadastro_coluna2">
-                <label for="desc">descrição</label>
+                <label for="desc">Descrição</label>
                 <textarea name="" id="desc"></textarea>
             </div>
     </section>
@@ -136,7 +136,11 @@
         </search>
     </section>
 
-
+<footer>
+    <p>
+        
+    </p>
+</footer>
 
 
 
