Seme finalização da tela produtos

--- a/index.html
+++ b/index.html
@@ -6,30 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos De Outono</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <img src="./img/folha-outono.jpg" alt="">
+    <img src="./img/Captura de tela 2025-09-25 133950.png" alt="">
     <section class="cardis">
         <div class="card">
             <h2 class="nome">Vela Perfumada Maçã</h2>
             <img src="./img/Captura de tela 2025-09-24 164054.png" alt="">
-            <span>R$ 89,00/kg.</span>
+            <span>R$ 89,00</span>
         </div>
         <div class="card">
             <h2 class="nome">Vela Perfumada Abóbora</h2>
             <img src="./img/Captura de tela 2025-09-24 164111.png" alt="">
-            <span>R$ 89,00/kg.</span>
+            <span>R$ 89,00</span>
         </div>
         <div class="card">
             <h2 class="nome">Vela Perfumada Canela</h2>
             <img src="./img/Captura de tela 2025-09-24 164128.png" alt="">
-            <span>R$ 89,00/kg.</span>
+            <span>R$ 89,00</span>
         </div>
         <div class="card">
             <h2 class="nome">Vela Perfumada Marshmallow</h2>
             <img src="./img/Captura de tela 2025-09-24 164141.png" alt="">
-            <span>R$ 89,00/kg.</span>
+            <span>R$ 89,00</span>
         </div>
     </section>
 
@@ -37,6 +40,9 @@
         <h1 class="acessivel">Pagina de Produtos de Outono</h1>
 
     </main>
+    <footer class="rodape">
+        <img src="./img/Captura de tela 2025-09-25 142058.png" alt="">
+    </footer>
 
 </body>
 
