--- a/Home/index.html
+++ b/Home/index.html
@@ -18,7 +18,6 @@
 <body>
     <header>
         <div class="container_cabecalho">
-
             <div class="pagina_inicial">
                 <h1>VELUNA</h1>
             </div>
@@ -32,22 +31,24 @@
                         d="M448 272C448 174.8 369.2 96 272 96C174.8 96 96 174.8 96 272C96 369.2 174.8 448 272 448C369.2 448 448 369.2 448 272zM407.3 430C371 461.2 323.7 480 272 480C157.1 480 64 386.9 64 272C64 157.1 157.1 64 272 64C386.9 64 480 157.1 480 272C480 323.7 461.2 371 430 407.3L571.3 548.7C577.5 554.9 577.5 565.1 571.3 571.3C565.1 577.5 554.9 577.5 548.7 571.3L407.3 430z" />
                 </svg>
             </div>
-
-
-            <div class="cabecalho_vela">
-                <img src="../assets/foto poster.png" alt="foto">
-                <h2>VELUNA</h2>
-                <h3> "Aroma que acolhe."</h3>
-            </div>
         </div>
+    </header>
+    <main>
+
+        <section class="banner">
+             <div class="cabecalho_vela">
+                <span>VELUNA</span>
+                <span>"Aroma que acolhe."</span>
+            </div>
+        </section>
 
         <div class="colecao_outono">
             <img src="../assets/foto vela.png" alt="">
-            <div>
 
+            <div>
                 <h2>Coleção de outono</h2>
-                <a>Inspirada nas cores aromas da estação, nossa coleção traz notas de vinho notas de vinho tinto, fruta
-                    secas especiarias e o calor acolhedor de elegancia.</a>
+                <p>Inspirada nas cores aromas da estação, nossa coleção traz notas de vinho notas de vinho tinto, fruta
+                    secas especiarias e o calor acolhedor de elegancia.</p>
             </div>
         </div>
 
@@ -58,13 +59,9 @@
             <img src="../assets/Frame 40.png" alt="">
 
         </div>
+    </main>
 
-
-    
-
-    </header>
-
-
+    <footer></footer>
 
 
 </body>
