--- a/index.html
+++ b/index.html
@@ -12,31 +12,49 @@
 </head>
 
 <body>
+    <header>
+        <div class="container_cabecalho">
+            <div class="pagina_produtos">
+                <img src="./img/Captura de tela 2025-09-25 142058.png" alt="">
+            </div>
+
+            <div class="colecao">
+                <p>Coleção</p>
+                <p>Cadastro</p>
+                <svg xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 640 640"><!--! Font Awesome Pro 7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc. -->
+                    <path fill="currentColor"
+                        d="M448 272C448 174.8 369.2 96 272 96C174.8 96 96 174.8 96 272C96 369.2 174.8 448 272 448C369.2 448 448 369.2 448 272zM407.3 430C371 461.2 323.7 480 272 480C157.1 480 64 386.9 64 272C64 157.1 157.1 64 272 64C386.9 64 480 157.1 480 272C480 323.7 461.2 371 430 407.3L571.3 548.7C577.5 554.9 577.5 565.1 571.3 571.3C565.1 577.5 554.9 577.5 548.7 571.3L407.3 430z" />
+                </svg>
+            </div>
+        </div>
+    </header>
+
     <main>
-    <img src="./img/Captura de tela 2025-09-25 133950.png" alt="">
-    <section class="cardis">
-        <div class="card">
-            <h2 class="nome">Vela Perfumada Maçã</h2>
-            <img src="./img/Captura de tela 2025-09-24 164054.png" alt="">
-            <span>R$ 89,00</span>
-        </div>
-        <div class="card">
-            <h2 class="nome">Vela Perfumada Abóbora</h2>
-            <img src="./img/Captura de tela 2025-09-24 164111.png" alt="">
-            <span>R$ 89,00</span>
-        </div>
-        <div class="card">
-            <h2 class="nome">Vela Perfumada Canela</h2>
-            <img src="./img/Captura de tela 2025-09-24 164128.png" alt="">
-            <span>R$ 89,00</span>
-        </div>
-        <div class="card">
-            <h2 class="nome">Vela Perfumada Marshmallow</h2>
-            <img src="./img/Captura de tela 2025-09-24 164141.png" alt="">
-            <span>R$ 89,00</span>
-        </div>
-    </section>
-    <h1 class="acessivel">Pagina de Produtos de Outono</h1>
+        <img src="./img/Captura de tela 2025-09-25 133950.png" alt="">
+        <section class="cardis">
+            <div class="card">
+                <h2 class="nome">Vela Perfumada Maçã</h2>
+                <img src="./img/Captura de tela 2025-09-24 164054.png" alt="">
+                <span>R$ 89,00</span>
+            </div>
+            <div class="card">
+                <h2 class="nome">Vela Perfumada Abóbora</h2>
+                <img src="./img/Captura de tela 2025-09-24 164111.png" alt="">
+                <span>R$ 89,00</span>
+            </div>
+            <div class="card">
+                <h2 class="nome">Vela Perfumada Canela</h2>
+                <img src="./img/Captura de tela 2025-09-24 164128.png" alt="">
+                <span>R$ 89,00</span>
+            </div>
+            <div class="card">
+                <h2 class="nome">Vela Perfumada Marshmallow</h2>
+                <img src="./img/Captura de tela 2025-09-24 164141.png" alt="">
+                <span>R$ 89,00</span>
+            </div>
+        </section>
+        <h1 class="acessivel">Pagina de Produtos de Outono</h1>
 
     </main>
     <footer class="rodape">
