--- a/Home/index.html
+++ b/Home/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Italiana&family=Julius+Sans+One&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Baskervville:ital,wght@0,400..700;1,400..700&family=Italiana&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
@@ -20,25 +20,26 @@
         <div class="container_cabecalho">
             <div class="pagina_inicial">
                 <h1>VELUNA</h1>
-            </div>
-
-            <div class="colecao">
-                <a>Coleção</a>
-                <a>Cadastro</a>
-                <svg xmlns="http://www.w3.org/2000/svg"
-                    viewBox="0 0 640 640"><!--! Font Awesome Pro 7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc. -->
-                    <path fill="currentColor"
-                        d="M448 272C448 174.8 369.2 96 272 96C174.8 96 96 174.8 96 272C96 369.2 174.8 448 272 448C369.2 448 448 369.2 448 272zM407.3 430C371 461.2 323.7 480 272 480C157.1 480 64 386.9 64 272C64 157.1 157.1 64 272 64C386.9 64 480 157.1 480 272C480 323.7 461.2 371 430 407.3L571.3 548.7C577.5 554.9 577.5 565.1 571.3 571.3C565.1 577.5 554.9 577.5 548.7 571.3L407.3 430z" />
-                </svg>
+                
+                            <div class="colecao">
+                                <a>Coleção</a>
+                                <a>Cadastro</a>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 640 640"><!--! Font Awesome Pro 7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2025 Fonticons, Inc. -->
+                                    <path fill="currentColor"
+                                        d="M448 272C448 174.8 369.2 96 272 96C174.8 96 96 174.8 96 272C96 369.2 174.8 448 272 448C369.2 448 448 369.2 448 272zM407.3 430C371 461.2 323.7 480 272 480C157.1 480 64 386.9 64 272C64 157.1 157.1 64 272 64C386.9 64 480 157.1 480 272C480 323.7 461.2 371 430 407.3L571.3 548.7C577.5 554.9 577.5 565.1 571.3 571.3C565.1 577.5 554.9 577.5 548.7 571.3L407.3 430z" />
+                                </svg>
+                            </div>
             </div>
         </div>
     </header>
     <main>
 
         <section class="banner">
-             <div class="cabecalho_vela">
-                <span>VELUNA</span>
-                <span>"Aroma que acolhe."</span>
+            <div class="cabecalho_vela">
+                <img src="../assets/Group 12.png" alt="">
+                <!-- <span>VELUNA</span>
+                <span>"Aroma que acolhe."</span> -->
             </div>
         </section>
 
@@ -53,10 +54,14 @@
         </div>
 
         <div class="container_estacoes">
-            <img src="../assets/inverno.png" alt="">
-            <img src="../assets/primavera.png" alt="">
-            <img src="../assets/image 10.png" alt="">
-            <img src="../assets/Frame 40.png" alt="">
+            <div class="estacoes_col1">
+                <img src="../assets/inverno.png" alt="">
+                <img src="../assets/Frame 40.png" alt="">
+            </div>
+            <div class="estacoes_col2">
+                <img src="../assets/image 11.svg" alt="">
+                <img src="../assets/image 12.svg" alt="">
+            </div>
 
         </div>
     </main>
